-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.26
-
Fix Version/s: 0.28
-
Component/s: C++ Clustering
-
Labels:None
If the cluster is mis-configured so that backups do not have access to the primary (e.g. by using an ACL that does not provide full access to the ha-username) then the primary will close attempted connections with a connection-forced error.
This will close the backup link, so it no longer attempts to connect, rendering the backup useless. There is a warning message but its not obvious that this indicates a fatal problem:
2014-01-08 10:22:10 [Broker] warning Client closed connection with 320: ACL denied anonymous creating a federation link