QPID-5482: HA Backup becomes useless if a connection-forced error is raised.

Backup will now shut-down with critical error if it receives a connection-forced
while trying to connect to the primary so the problem is obvious.

ha/StatusCheck: don't use the HaBroker outside the StatusCheck constructor
as it may be deleted. Avoids core dump if broker shuts down early while
status check is ongoing.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1558538 13f79535-47bb-0310-9956-ffa450edef68